Added Day 2 Project and contact details

--- a/Inktober/index.html
+++ b/Inktober/index.html
@@ -46,7 +46,7 @@
             </tr>
             <tr>
               <td class="clean"><a href="./index.html" class="cal-link">Website</a></td>
-              <td class="clean"><a href="./projects/day-2.html" class="cal-link">?</a></td>
+              <td class="clean"><a href="./projects/day-2.html" class="cal-link">Ghost</a></td>
               <td class="clean"><a href="./projects/day-3.html" class="cal-link">?</a></td>
               <td class="clean"><a href="./projects/day-4.html" class="cal-link">?</a></td>
             </tr>
@@ -129,7 +129,8 @@
     </main>
     <br>
     <footer>
-      <h6>Created by Luci Galer | 01/10/2020
+      <h6>Created by Luci Galer | 01/10/2020</h6>
+      <h6 id="contact">Instagram: @lucigaler</h6>
     </footer>
   </body>
 </html>
