--- a/Inktober/projects/day-2.html
+++ b/Inktober/projects/day-2.html
@@ -13,8 +13,16 @@
       </nav>
     </header>
     <main class="center">
-      <p>Oops! Looks like I haven't completed this project yet. Check back later!</p>
+      <p class="text-center">Today I was feeling Halloween-y, so I made myself a little ghost friend using needle felting.
+        <br>
+        Open to name suggestions!</p>
+        <br>
+      <img class="img-center" src="../resources/ghostie-2.jpg" alt="Felted Ghost" />
     </main>
+    <footer>
+      <h6>Created by Luci Galer | 02/10/2020</h6>
+      <h6 id="contact">Instagram: @lucigaler</h6>
+    </footer>
   </body>
 
 </html>
